@@ -4,7 +4,9 @@ import org.springframework.core.io.ClassPathResource;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.security.KeyFactory;
+import java.security.PrivateKey;
 import java.security.PublicKey;
+import java.security.spec.PKCS8EncodedKeySpec;
 import java.security.spec.X509EncodedKeySpec;
 import java.util.Base64;
 
@@ -12,11 +14,12 @@ public class KeyLoader {
 
     public static PublicKey loadPublicKey(String location) throws Exception {
         ClassPathResource resource = new ClassPathResource(location.replace("classpath:", ""));
-        byte[] keyBytes = Files.readAllBytes(resource.getFile().toPath());
-        String keyString = new String(keyBytes)
-                .replaceAll("-----BEGIN PUBLIC KEY-----", "")
-                .replaceAll("-----END PUBLIC KEY-----", "")
-                .replaceAll("\\s", "");
+
+        String keyString = new String(resource.getInputStream().readAllBytes())
+                .replace("-----BEGIN PUBLIC KEY-----", "")
+                .replace("-----END PUBLIC KEY-----", "")
+                .replaceAll("\\s+", "");
+
         byte[] decoded = Base64.getDecoder().decode(keyString);
         X509EncodedKeySpec spec = new X509EncodedKeySpec(decoded);
         return KeyFactory.getInstance("RSA").generatePublic(spec);
